# root-seeker-v2

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.hybrid.yml  docker-compose.pull.yml  docker-compose.yml  pyproject.toml  rootseeker-v2-代码实现提示词.md  rootseeker-v2-重构蓝图.md  setup.ps1  setup.sh  start.bat  start.sh
apps/: __init__.py
config/: qdrant_config.yaml
docker/: Dockerfile.gitnexus  Dockerfile.zoekt  README.md  gitnexus_http_server.mjs  prepare-zoekt.ps1  prepare-zoekt.sh  zoekt-entrypoint.sh  zoekt_index_http_server.py
docs/: implementation-status.md  storage-mysql.md  storage-sqlite.md
k8s/: admin.yaml  api.yaml  configmap.yaml  gitnexus.yaml  ingress.yaml  kustomization.yaml  mysql.yaml  namespace.yaml  pvc.yaml  qdrant.yaml  scheduler.yaml  secrets.yaml  worker.yaml  zoekt.yaml
mcp_servers/: __init__.py
rootseeker/: __init__.py
rootseeker-v2-子任务/: 00-子任务总览.md  01-架构冻结与核心契约.md  02-骨架工程与最小链路.md  03-Skill系统改造.md  04-MCP工具平面.md  05-证据与推理内核.md  06-自动沉淀与运营化.md  07-Agent运行时内核.md  08-插件化流程系统.md  09-通道与路由系统.md  10-Gateway控制面.md  11-CLI命令体系.md  12-Cron定时任务.md  13-配置与基础设施.md  14-文件级细化与OpenClaw对标.md  15-小目标三级细化总览.md  16-三级文件四级细化总览.md  17-V1能力对齐与迁移清单.md  18-日志数据面契约.md  19-服务目录与日志源映射.md  20-内置默认故障排查Flow.md  21-代码索引与仓库同步路线图.md  22-回放与评估基准.md  23-T14-Task与Flow运行时.md  24-T15-日志数据面任务树.md  25-T16-服务目录任务树.md  26-T17-代码索引插件任务树.md  27-T18-回放与评估任务树.md
scripts/: bulk_sync_codeup.py  demo_api_flow.sh  demo_default_flow.py  init_mysql.py  install_local_codesearch_deps.sh  push-dockerhub.ps1  real_codesearch_integration.py  reindex_gitnexus.py  reindex_qdrant_symbol_chunks.py  reset_bloated_sqlite.py  reset_mysql.py  run_real_codesearch_smoke.sh  setup_wizard.py  smoke_zoekt_qdrant.py  start-local.ps1  start_gitnexus_docker.ps1  start_zoekt_qdrant.sh  start_zoekt_qdrant_docker.sh  stop_zoekt_qdrant.sh  (+4 more)
(+881 files in other folders)
